--- a/_posts/2025-10-18-Credits.md
+++ b/_posts/2025-10-18-Credits.md
@@ -1,7 +1,7 @@
 ---
 author_profile: false
 header:
-    image: /assets/images/thanks.png
+    image: /assets/images/thanks.jpg
 ---
 The helpful information was pieced together with the help of numerous people, thank you. 
 
