Add 2 new articles and image alt text

--- a/_posts/2025-10-18-Credits.md
+++ b/_posts/2025-10-18-Credits.md
@@ -2,6 +2,7 @@
 author_profile: false
 header:
     image: /assets/images/thanks.jpg
+    image_alt: thank you
 ---
 The helpful information was pieced together with the help of numerous people, thank you. 
 
